--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /*/*/playground.py
+/.idea/.gitignore
+/.idea/.name
+/.idea/Advent_of_Code.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
